# app/Http/Controllers/API/PhoneOfferController.php
@@ -17,6 +17,42 @@ class PhoneOfferController extends Controller
         $this->phoneOfferRepository = $phoneOfferRepository;
     }
 
+    /**
+     * Создание телефона.
+     *
+     * @OA\Post(
+     *     path="/api/phoneOffer/create",
+     *     tags={"PhoneOffer"},
+     *     summary="Создание предложения телефона.",
+     *     description="После запроса будет создано предложение телефона.",
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="memory",
+     *                     description="Память.",
+     *                     type="integer",
+     *                     default="32"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="color",
+     *                     description="Цвет",
+     *                     type="string",
+     *                     default="black"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="JSON c полем 'message', success - все прошло успешно, failed - что-то пошло не так"
+     *     )
+     * )
+     *
+     * @param PhoneOfferCreateRequest $request
+     * @return \Illuminate\Http\JsonResponse
+     */
     public function create(PhoneOfferCreateRequest $request)
     {
         $phone = $this->phoneOfferRepository->create($request->toArray());
